--- a/Yung/Yung.csproj
+++ b/Yung/Yung.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <PackageVersion>0.1.0</PackageVersion>
         <Authors>Damian Koski</Authors>
         <Copyright>2020 Damian Koski</Copyright>
