--- a/Yung/Yung.csproj
+++ b/Yung/Yung.csproj
@@ -15,4 +15,8 @@
         <NeutralLanguage>en-US</NeutralLanguage>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.7.82" />
+    </ItemGroup>
+
 </Project>
